--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "gulp-cache": "^0.4.5",
     "gulp-clean-css": "^2.3.0",
     "gulp-concat": "^2.6.1",
-	"gulp-group-css-media-queries": "^1.2.0",
+    "gulp-group-css-media-queries": "^1.2.0",
     "gulp-imagemin": "^3.1.1",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
+    "gulp-sass-unicode": "^1.0.1",
     "gulp-sourcemaps": "^2.3.1",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
